chore: add prod profile and delivery/return order features